--- a/Bind/Src/MantenedorIniciativa.fx.yaml
+++ b/Bind/Src/MantenedorIniciativa.fx.yaml
@@ -132,7 +132,7 @@ MantenedorIniciativa As screen:
                 Y: =14
                 ZIndex: =5
 
-            Tg_Obj_Crear As Toggle:
+            Tg_Obj_Crear As Alternancia:
                 BasePaletteColor: =
                 Checked: |-
                     =If(
@@ -162,7 +162,7 @@ MantenedorIniciativa As screen:
                 Y: =65
                 ZIndex: =6
 
-            Tg_Obj_Eliminar As Toggle:
+            Tg_Obj_Eliminar As Alternancia:
                 BasePaletteColor: =
                 Checked: |-
                     =If(
@@ -192,7 +192,7 @@ MantenedorIniciativa As screen:
                 Y: =164
                 ZIndex: =7
 
-            Tg_Obj_Editar As Toggle:
+            Tg_Obj_Editar As Alternancia:
                 BasePaletteColor: =
                 Checked: |-
                     =If(
@@ -242,7 +242,7 @@ MantenedorIniciativa As screen:
                 Y: =12
                 ZIndex: =10
 
-            Tg_Kpi_Crear As Toggle:
+            Tg_Kpi_Crear As Alternancia:
                 BasePaletteColor: =
                 Checked: |-
                     =If(
@@ -272,7 +272,7 @@ MantenedorIniciativa As screen:
                 Y: =65
                 ZIndex: =11
 
-            Tg_Kpi_Eliminar As Toggle:
+            Tg_Kpi_Eliminar As Alternancia:
                 BasePaletteColor: =
                 Checked: |-
                     =If(
@@ -302,7 +302,7 @@ MantenedorIniciativa As screen:
                 Y: =164
                 ZIndex: =12
 
-            Tg_Kpi_Editar As Toggle:
+            Tg_Kpi_Editar As Alternancia:
                 BasePaletteColor: =
                 Checked: |-
                     =If(
@@ -351,7 +351,7 @@ MantenedorIniciativa As screen:
                 Y: =14
                 ZIndex: =15
 
-            Tg_Op_Crear As Toggle:
+            Tg_Op_Crear As Alternancia:
                 BasePaletteColor: =
                 Checked: |-
                     =If(
@@ -381,7 +381,7 @@ MantenedorIniciativa As screen:
                 Y: =65
                 ZIndex: =16
 
-            Tg_Op_Eliminar As Toggle:
+            Tg_Op_Eliminar As Alternancia:
                 BasePaletteColor: =
                 Checked: |-
                     =If(
@@ -411,7 +411,7 @@ MantenedorIniciativa As screen:
                 Y: =164
                 ZIndex: =17
 
-            Tg_Op_Editar As Toggle:
+            Tg_Op_Editar As Alternancia:
                 BasePaletteColor: =
                 Checked: |-
                     =If(
@@ -450,7 +450,7 @@ MantenedorIniciativa As screen:
                 Y: =14
                 ZIndex: =19
 
-            Tg_Kpi_Avances As Toggle:
+            Tg_Kpi_Avances As Alternancia:
                 BasePaletteColor: =
                 Checked: |-
                     =If(
@@ -480,7 +480,7 @@ MantenedorIniciativa As screen:
                 Y: =213
                 ZIndex: =20
 
-            Tg_Op_Priorizar As Toggle:
+            Tg_Op_Priorizar As Alternancia:
                 BasePaletteColor: =
                 Checked: |-
                     =If(
@@ -520,7 +520,7 @@ MantenedorIniciativa As screen:
                 Y: =14
                 ZIndex: =22
 
-            Tg_So_Crear As Toggle:
+            Tg_So_Crear As Alternancia:
                 BasePaletteColor: =
                 Checked: |-
                     =If(
@@ -550,7 +550,7 @@ MantenedorIniciativa As screen:
                 Y: =65
                 ZIndex: =23
 
-            Tg_So_Eliminar As Toggle:
+            Tg_So_Eliminar As Alternancia:
                 BasePaletteColor: =
                 Checked: |-
                     =If(
@@ -580,7 +580,7 @@ MantenedorIniciativa As screen:
                 Y: =164
                 ZIndex: =24
 
-            Tg_So_Editar As Toggle:
+            Tg_So_Editar As Alternancia:
                 BasePaletteColor: =
                 Checked: |-
                     =If(
@@ -610,7 +610,7 @@ MantenedorIniciativa As screen:
                 Y: =114
                 ZIndex: =25
 
-            Tg_Administrador As Toggle:
+            Tg_Administrador As Alternancia:
                 BasePaletteColor: =
                 Checked: =ThisItem.Administrador
                 DisplayMode: =DisplayMode.Edit
