--- a/Bind/Src/RepositorioProveedor.fx.yaml
+++ b/Bind/Src/RepositorioProveedor.fx.yaml
@@ -1977,11 +1977,11 @@ RepositorioProveedor As screen:
                     DisabledBorderColor: =RGBA(0, 0, 0, 0)
                     DisabledColor: =RGBA(0, 0, 0, 1)
                     DisabledFill: =RGBA(0, 0, 0, 0)
-                    DisplayFields: =["Nombre_Persona"]
+                    DisplayFields: =["Categoria"]
                     DisplayMode: =Parent.DisplayMode
                     Items: =Col_BD_Persona
-                    SearchFields: =["Nombre_Persona"]
-                    SearchItems: =Search(Col_BD_Persona,ComboBox2_5.SearchText,Nombre_Persona)
+                    SearchFields: =["Categoria"]
+                    SearchItems: =Search(Col_BD_Persona,ComboBox2_5.SearchText,Categoria)
                     SelectMultiple: =false
                     Width: =282
                     X: =28
@@ -2062,11 +2062,11 @@ RepositorioProveedor As screen:
                     DisabledBorderColor: =RGBA(0, 0, 0, 0)
                     DisabledColor: =RGBA(0, 0, 0, 1)
                     DisabledFill: =RGBA(0, 0, 0, 0)
-                    DisplayFields: =["Nombre_Persona"]
+                    DisplayFields: =["Categoria"]
                     DisplayMode: =Parent.DisplayMode
                     Items: =Col_BD_Persona
-                    SearchFields: =["Nombre_Persona"]
-                    SearchItems: =Search(Col_BD_Persona,ComboBox2_7.SearchText,Nombre_Persona)
+                    SearchFields: =["Categoria"]
+                    SearchItems: =Search(Col_BD_Persona,ComboBox2_7.SearchText,Categoria)
                     SelectMultiple: =false
                     Width: =282
                     X: =30
