--- a/Bind/Src/ListadoIniciativas.fx.yaml
+++ b/Bind/Src/ListadoIniciativas.fx.yaml
@@ -908,7 +908,7 @@ ListadoIniciativas As screen:
                         Table({DisplayName:_Perfil.displayName, Claims:_Perfil.userPrincipalName})
                     )
                 )
-            DisplayFields: =["Nombre_x0020_Producto_x002f_Proy"]
+            DisplayFields: =["AreadeImpacto"]
             DisplayMode: |
                 =
                         DisplayMode.Edit
@@ -935,8 +935,8 @@ ListadoIniciativas As screen:
             PressedFill: =RGBA(0, 121, 187, 1)
             Reset: |
                 =Valor = "Producto" || Valor = "Proyecto"
-            SearchFields: =["Nombre_x0020_Producto_x002f_Proy"]
-            SearchItems: =Search(Filter(Col_DominiosGestion,Iniciativa),Cmb_FiltroJefePO_3.SearchText,Nombre_x0020_Producto_x002f_Proy)
+            SearchFields: =["AreadeImpacto"]
+            SearchItems: =Search(Filter(Col_DominiosGestion,Iniciativa),Cmb_FiltroJefePO_3.SearchText,AreadeImpacto)
             SelectionFill: =RGBA(0, 121, 187, 1)
             SelectMultiple: =false
             Tooltip: =
