--- a/Bind/Src/MantenedoresFCST.fx.yaml
+++ b/Bind/Src/MantenedoresFCST.fx.yaml
@@ -1620,8 +1620,8 @@ MantenedoresFCST As screen:
                 Items: |
                     =If(
                         _VarUsuarioJefe = "F0T01QE" || _VarUsuarioJefe = "F0M0677" || _VarUsuarioJefe = "R0A06NW" || _VarUsuarioJefe = "P0O01JF" || _VarUsuarioJefe = "VN54CEU" || _VarUsuarioJefe = Upper("j0e03yj"),
-                        Sort(Filter(Col_BD_Fcst_ServAsignados, StartsWith(InputData,Txt_BuscarenTabla.Text) || StartsWith(IDServicio,Txt_BuscarenTabla.Text), IsBlank(Cmb_FiltroInputData_Mantenedor.Selected.ImputData) || InputData = Cmb_FiltroInputData_Mantenedor.Selected.ImputData),Created,SortOrder.Descending),
-                        Sort(Filter(Col_ServAsignados, StartsWith(Servicio,Txt_BuscarenTabla.Text)),Created,SortOrder.Descending)
+                        Sort(Filter(Col_BD_Fcst_ServAsignados, StartsWith(InputData,Txt_BuscarenTabla.Text) || StartsWith(IDServicio,Txt_BuscarenTabla.Text), IsBlank(Cmb_FiltroInputData_Mantenedor.Selected.ImputData) || InputData = Cmb_FiltroInputData_Mantenedor.Selected.ImputData),Creado,SortOrder.Descending),
+                        Sort(Filter(Col_ServAsignados, StartsWith(Servicio,Txt_BuscarenTabla.Text)),Creado,SortOrder.Descending)
                      )
                 Layout: =Layout.Vertical
                 LoadingSpinner: =LoadingSpinner.Data
@@ -1652,7 +1652,7 @@ MantenedoresFCST As screen:
                     Default: =LookUp(Col_BD_Fcst_Ceco, Ceco = LookUp(Col_BD_FCST_ServicioCuentaCeco, IDServicio = ThisItem.IDServicio, Ceco))
                     DefaultSelectedItems: =LookUp(Col_BD_Fcst_Ceco, Ceco = LookUp(Col_BD_FCST_ServicioCuentaCeco, IDServicio = ThisItem.IDServicio, Ceco))
                     DisabledColor: =RGBA(53, 61, 63, 1)
-                    DisplayFields: =["Ceco","NombreCeco"]
+                    DisplayFields: =["Ceco"]
                     DisplayMode: |
                         =If(
                             ThisItem.Editando && IsBlank(LookUp(Col_BD_Fcst_Ceco, Ceco = LookUp(Col_BD_FCST_ServicioCuentaCeco, IDServicio = ThisItem.IDServicio, Ceco))),
@@ -1682,7 +1682,7 @@ MantenedoresFCST As screen:
                     Default: =LookUp(Col_BD_Fcst_Cuenta, Cuenta = LookUp(Col_BD_FCST_ServicioCuentaCeco, IDServicio = ThisItem.IDServicio, Cuenta))
                     DefaultSelectedItems: =LookUp(Col_BD_Fcst_Cuenta, Cuenta = LookUp(Col_BD_FCST_ServicioCuentaCeco, IDServicio = ThisItem.IDServicio, Cuenta))
                     DisabledColor: =RGBA(53, 61, 63, 1)
-                    DisplayFields: =["Cuenta","NombreCuenta"]
+                    DisplayFields: =["ComplianceAssetId"]
                     DisplayMode: |
                         =If(
                             ThisItem.Editando && IsBlank(LookUp(Col_BD_Fcst_Cuenta, Cuenta = LookUp(Col_BD_FCST_ServicioCuentaCeco, IDServicio = ThisItem.IDServicio, Cuenta))),
@@ -1698,8 +1698,8 @@ MantenedoresFCST As screen:
                     Items: =Col_BD_Fcst_Cuenta
                     OnSelect: =Select(Parent)
                     Reset: =_VarResetCtrlSer
-                    SearchFields: =["Cuenta"]
-                    SearchItems: =Search(Col_BD_Fcst_Cuenta,Cmb_CuentaNuevo.SearchText,Cuenta)
+                    SearchFields: =["ComplianceAssetId"]
+                    SearchItems: =Search(Col_BD_Fcst_Cuenta,Cmb_CuentaNuevo.SearchText,ComplianceAssetId)
                     SelectMultiple: =false
                     Size: =11
                     Template: =ListItemTemplate.Double
@@ -2134,7 +2134,7 @@ MantenedoresFCST As screen:
                                 IDServicio: "",
                                 Servicio: "",
                                 TipoMoneda: "",
-                                Created: Now(),
+                                Creado: Now(),
                                 Editando: true
                             }
                         ),
@@ -2147,7 +2147,7 @@ MantenedoresFCST As screen:
                                 IDServicio: "",
                                 Servicio: "",
                                 TipoMoneda: "",
-                                Created: Now(),
+                                Creado: Now(),
                                 Editando: true
                             }
                         )
