--- a/Bind/Src/ModuloGestionEquipoV1.fx.yaml
+++ b/Bind/Src/ModuloGestionEquipoV1.fx.yaml
@@ -220,6 +220,28 @@ ModuloGestionEquipoV1 As screen:
                 Y: =16
                 ZIndex: =9
 
+            Dpd_TipoTrabajo As Desplegable.pcfdataset:
+                BasePaletteColor: =RGBA(30, 136, 230, 1)
+                DefaultSelectedItems: |-
+                    =Table({Value:ThisItem.TipoTrabajo})
+                DisplayMode: |-
+                    =If(
+                        _VarEquipo = "MiEquipo",
+                        DisplayMode.Disabled,
+                        DisplayMode.Edit
+                    )
+                FontSize: =14
+                Height: =28
+                Items: =["","SPA", "BAU", "SPA + BAU"]
+                OnChange: |-
+                    =Patch(Ingresos_Ceses_Personas, LookUp(Ingresos_Ceses_Personas, ID = ThisItem.IDe), {TipoTrabajo: Dpd_TipoTrabajo.Selected.Value });
+                    Patch(Col_EquipoOrdenados, LookUp(Col_EquipoOrdenados, Orden = ThisItem.Orden), {TipoTrabajo: Dpd_TipoTrabajo.Selected.Value })
+                Required: =false
+                Width: =138
+                X: =1098
+                Y: =11
+                ZIndex: =16
+
             Gp_Acciones As group:
                 Height: =5
                 Width: =5
@@ -275,28 +297,6 @@ ModuloGestionEquipoV1 As screen:
                     X: =1196
                     Y: =61
                     ZIndex: =15
-
-            Dpd_TipoTrabajo As Dropdown.pcfdataset:
-                BasePaletteColor: =RGBA(30, 136, 230, 1)
-                DefaultSelectedItems: |-
-                    =Table({Value:ThisItem.TipoTrabajo})
-                DisplayMode: |-
-                    =If(
-                        _VarEquipo = "MiEquipo",
-                        DisplayMode.Disabled,
-                        DisplayMode.Edit
-                    )
-                FontSize: =14
-                Height: =28
-                Items: =["","SPA", "BAU", "SPA + BAU"]
-                OnChange: |-
-                    =Patch(Ingresos_Ceses_Personas, LookUp(Ingresos_Ceses_Personas, ID = ThisItem.IDe), {TipoTrabajo: Dpd_TipoTrabajo.Selected.Value });
-                    Patch(Col_EquipoOrdenados, LookUp(Col_EquipoOrdenados, Orden = ThisItem.Orden), {TipoTrabajo: Dpd_TipoTrabajo.Selected.Value })
-                Required: =false
-                Width: =138
-                X: =1098
-                Y: =11
-                ZIndex: =16
 
         Txt_BuscadorPersona_1 As text:
             BorderColor: =RGBA(53, 61, 63, 1)
@@ -563,10 +563,10 @@ ModuloGestionEquipoV1 As screen:
                     ={Nombre_Persona:LookUp(Col_BD_Persona, Usuario = Upper(LookUp(Col_BD_Equipos, IDEquipo = _VarEquipoSeleccionado,ResponsableEquipo)),Nombre_Persona), Usuario: LookUp(Col_BD_Persona, Usuario = Upper(LookUp(Col_BD_Equipos, IDEquipo = _VarEquipoSeleccionado,ResponsableEquipo)),Usuario)}
                 DefaultSelectedItems: |-
                     =Table({Nombre_Persona:LookUp(Col_BD_Persona, Usuario = Upper(LookUp(Col_BD_Equipos, IDEquipo = _VarEquipoSeleccionado,ResponsableEquipo)),Nombre_Persona), Usuario: LookUp(Col_BD_Persona, Usuario = Upper(LookUp(Col_BD_Equipos, IDEquipo = _VarEquipoSeleccionado,ResponsableEquipo)),Usuario)})
-                DisplayFields: =["Nombre_Persona"]
+                DisplayFields: =["Categoria"]
                 Items: =Col_BD_Persona
-                SearchFields: =["Nombre_Persona"]
-                SearchItems: =Search(Col_BD_Persona,Cmb_ModEq_Responsable.SearchText,Nombre_Persona)
+                SearchFields: =["Categoria"]
+                SearchItems: =Search(Col_BD_Persona,Cmb_ModEq_Responsable.SearchText,Categoria)
                 Visible: |-
                     =If(
                         _VarEquipo = "MiEquipo",
@@ -590,10 +590,10 @@ ModuloGestionEquipoV1 As screen:
                     ={Nombre_Persona:LookUp(Col_BD_Persona, Usuario = Upper(LookUp(Col_BD_Equipos, IDEquipo = _VarEquipoSeleccionado,EM)),Nombre_Persona), Usuario: LookUp(Col_BD_Persona, Usuario = Upper(LookUp(Col_BD_Equipos, IDEquipo = _VarEquipoSeleccionado,EM)),Usuario) }
                 DefaultSelectedItems: |-
                     =Table({Nombre_Persona:LookUp(Col_BD_Persona, Usuario = Upper(LookUp(Col_BD_Equipos, IDEquipo = _VarEquipoSeleccionado,EM)),Nombre_Persona), Usuario: LookUp(Col_BD_Persona, Usuario = Upper(LookUp(Col_BD_Equipos, IDEquipo = _VarEquipoSeleccionado,EM)),Usuario) })
-                DisplayFields: =["Nombre_Persona"]
+                DisplayFields: =["Categoria"]
                 Items: =Col_BD_Persona
-                SearchFields: =["Nombre_Persona"]
-                SearchItems: =Search(Col_BD_Persona,Cmb_ModEq_EM.SearchText,Nombre_Persona)
+                SearchFields: =["Categoria"]
+                SearchItems: =Search(Col_BD_Persona,Cmb_ModEq_EM.SearchText,Categoria)
                 Visible: |-
                     =If(
                         _VarEquipo = "MiEquipo",
@@ -610,10 +610,10 @@ ModuloGestionEquipoV1 As screen:
                     ={Nombre_Persona:LookUp(Col_BD_Persona, Usuario = Upper(LookUp(Col_BD_Equipos, IDEquipo = _VarEquipoSeleccionado,PM)),Nombre_Persona), Usuario: LookUp(Col_BD_Persona, Usuario = Upper(LookUp(Col_BD_Equipos, IDEquipo = _VarEquipoSeleccionado,PM)),Usuario) }
                 DefaultSelectedItems: |-
                     =Table({Nombre_Persona:LookUp(Col_BD_Persona, Usuario = Upper(LookUp(Col_BD_Equipos, IDEquipo = _VarEquipoSeleccionado,PM)),Nombre_Persona), Usuario: LookUp(Col_BD_Persona, Usuario = Upper(LookUp(Col_BD_Equipos, IDEquipo = _VarEquipoSeleccionado,PM)),Usuario) })
-                DisplayFields: =["Nombre_Persona"]
+                DisplayFields: =["Categoria"]
                 Items: =Col_BD_Persona
-                SearchFields: =["Nombre_Persona"]
-                SearchItems: =Search(Col_BD_Persona,Cmb_ModEq_PM.SearchText,Nombre_Persona)
+                SearchFields: =["Categoria"]
+                SearchItems: =Search(Col_BD_Persona,Cmb_ModEq_PM.SearchText,Categoria)
                 Visible: |-
                     =If(
                         _VarEquipo = "MiEquipo",
@@ -726,7 +726,7 @@ ModuloGestionEquipoV1 As screen:
                 Y: =2
                 ZIndex: =18
 
-            TextCanvas3 As Text:
+            TextCanvas3 As Texto:
                 Align: ='TextCanvas.Align'.Center
                 DisplayMode: =DisplayMode.Edit
                 FontColor: =
