--- a/Bind/Src/ModuloPersona.fx.yaml
+++ b/Bind/Src/ModuloPersona.fx.yaml
@@ -3988,7 +3988,7 @@ ModuloPersona As screen:
             Items: =Col_BD_Dominios
             PressedFill: =RGBA(0, 121, 187, 1)
             SearchFields: =["ComplianceAssetId"]
-            SearchItems: =Search(Col_BD_Dominios,Cmb_CambioDominio.SearchText,'Id. de activo de cumplimiento normativo')
+            SearchItems: =Search(Col_BD_Dominios,Cmb_CambioDominio.SearchText,ComplianceAssetId)
             SelectMultiple: =false
             Visible: =PopUpBorrar_CasoEspecial && Dpd_SeleccionarAccion_1.Selected.Value = "Movilidad interna"
             Width: =Txt_FondoForm1_17.Width - 27
