--- a/Bind/Src/ModuloProyectosIniciativas.fx.yaml
+++ b/Bind/Src/ModuloProyectosIniciativas.fx.yaml
@@ -1448,7 +1448,7 @@ ModuloProyectosIniciativas As screen:
         Y: =403
         ZIndex: =86
 
-    Chk_AplicaPO_1 As Checkbox:
+    Chk_AplicaPO_1 As Casilla:
         AccessibleLabel: ="Aplica PO/JO para el Proyecto"
         BasePaletteColor: =
         Checked: =First(ProyectoSeleccionado).AplicaJefeProyecto
@@ -1469,7 +1469,7 @@ ModuloProyectosIniciativas As screen:
         Y: =538
         ZIndex: =87
 
-    Chk_AplicaEM_1 As Checkbox:
+    Chk_AplicaEM_1 As Casilla:
         AccessibleLabel: ="Aplica EM para el Proyecto"
         BasePaletteColor: =
         Checked: =First(ProyectoSeleccionado).AplicaEM
@@ -1490,7 +1490,7 @@ ModuloProyectosIniciativas As screen:
         Y: =632
         ZIndex: =88
 
-    Chk_AplicaUx_1 As Checkbox:
+    Chk_AplicaUx_1 As Casilla:
         BasePaletteColor: =
         Checked: =First(ProyectoSeleccionado).AplicaUx
         DisplayMode: =DisplayMode.Edit
@@ -1510,7 +1510,7 @@ ModuloProyectosIniciativas As screen:
         Y: =903
         ZIndex: =89
 
-    Chk_AplicaDatos_1 As Checkbox:
+    Chk_AplicaDatos_1 As Casilla:
         AccessibleLabel: ="Aplica Datos para el Proyecto"
         BasePaletteColor: =
         Checked: =First(ProyectoSeleccionado).AplicaDatos
@@ -1531,7 +1531,7 @@ ModuloProyectosIniciativas As screen:
         Y: =811
         ZIndex: =90
 
-    Chk_AplicaNegocio_1 As Checkbox:
+    Chk_AplicaNegocio_1 As Casilla:
         AccessibleLabel: ="Aplica Negocio para el Proyecto"
         BasePaletteColor: =
         Checked: =First(ProyectoSeleccionado).AplicaNegocio
@@ -2039,7 +2039,7 @@ ModuloProyectosIniciativas As screen:
         ChevronFill: =RGBA(0, 121, 187, 1)
         ChevronHoverBackground: =RGBA(0, 121, 187, 1)
         DefaultSelectedItems: =Filter(Col_BD_Dominios , IDDominio = First(ProyectoSeleccionado).IDViaje)
-        DisplayFields: =["Title"]
+        DisplayFields: =["ComplianceAssetId"]
         Height: =Txt_FondoNegocio_3.Height - 10
         HoverBorderColor: =RGBA(0, 121, 187, 1)
         InputTextPlaceholder: ="Buscar responsable"
@@ -2048,8 +2048,8 @@ ModuloProyectosIniciativas As screen:
         OnSelect: =
         PressedFill: =RGBA(0, 121, 187, 1)
         Reset: =ResetearControlPry
-        SearchFields: =["Title"]
-        SearchItems: =Search(Sort(Search(Filter(Col_BD_Dominios,IDGerencias = "Ger-87EC3ACE-2B01-1EB7-19D4-EED0A2FC68EA"),"Viaje",IDDominio),Title,SortOrder.Ascending),Dpd_Pry_Dominio_1.SearchText,Title)
+        SearchFields: =["ComplianceAssetId"]
+        SearchItems: =Search(Sort(Search(Filter(Col_BD_Dominios,IDGerencias = "Ger-87EC3ACE-2B01-1EB7-19D4-EED0A2FC68EA"),"Viaje",IDDominio),Title,SortOrder.Ascending),Dpd_Pry_Dominio_1.SearchText,ComplianceAssetId)
         SelectMultiple: =false
         Width: =Txt_FondoNegocio_3.Width - 27
         X: =134
@@ -2220,7 +2220,7 @@ ModuloProyectosIniciativas As screen:
             =If(Dpd_Pry_TipoPry_1.Selected.Value="Llave en mano" || Rd_Pry_Discovery.Selected.Value="SI"||!(First(ProyectoSeleccionado).'Categoría Iniciativa'.Value="Producto Tecnológico"),[],
                 Filter(Col_BD_Equipos, IDEquipo =First(ProyectoSeleccionado).IDEquipo))
         DisabledColor: =RGBA(77, 77, 77, 1)
-        DisplayFields: =["Equipo_x002f_Squad"]
+        DisplayFields: =["ComplianceAssetId"]
         DisplayMode: =If(Dpd_Pry_TipoPry_1.Selected.Value="Llave en mano" || Rd_Pry_Discovery.Selected.Value="SI" || !(First(ProyectoSeleccionado).'Categoría Iniciativa'.Value="Producto Tecnológico"),DisplayMode.Disabled,DisplayMode.Edit)
         Height: =Txt_FondoEquipo_14.Height - 10
         HoverBorderColor: =RGBA(0, 121, 187, 1)
@@ -2240,7 +2240,7 @@ ModuloProyectosIniciativas As screen:
         OnSelect: =
         PressedFill: =RGBA(0, 121, 187, 1)
         Reset: =ResetearControlPry
-        SearchFields: =["Equipo_x002f_Squad"]
+        SearchFields: =["ComplianceAssetId"]
         SearchItems: |-
             =Search(SortByColumns( Filter(Col_BD_Equipos, IDGerencia = "Ger-355B1687-6EA9-89B5-55E1-C5408DE50A63",Estado="Activo"),"Equipo_x002f_Squad",SortOrder.Ascending)
             /*If(
@@ -2252,7 +2252,7 @@ ModuloProyectosIniciativas As screen:
                 );
                 Blank()
             )*/
-            ,Cmb_Gl_Equipo_1.SearchText,Equipo_x002f_Squad)
+            ,Cmb_Gl_Equipo_1.SearchText,ComplianceAssetId)
         SelectMultiple: =false
         Width: =Txt_FondoEquipo_14.Width - 27
         X: =1220
@@ -3445,7 +3445,7 @@ ModuloProyectosIniciativas As screen:
             Y: =327
             ZIndex: =32
 
-        "InfoButtonCanvas3_22 As 'Information button'":
+        "InfoButtonCanvas3_22 As 'Botón de información'":
             BasePaletteColor: =
             Content: ="Dueño del registro APM para el producto o servicio. Este rol corresponde al PO."
             DisplayMode: =DisplayMode.Edit
@@ -3463,7 +3463,7 @@ ModuloProyectosIniciativas As screen:
             Y: =629
             ZIndex: =34
 
-        "InfoButtonCanvas3_18 As 'Information button'":
+        "InfoButtonCanvas3_18 As 'Botón de información'":
             BasePaletteColor: =
             Content: ="Corresponde al ID de producto creado en Roadmap de productos de Walmart. Con este identificador puede solicitar Budget (Cloud) y está asociado al APM entre otros."
             DisplayMode: =DisplayMode.Edit
@@ -3481,7 +3481,7 @@ ModuloProyectosIniciativas As screen:
             Y: =438
             ZIndex: =35
 
-        "InfoButtonCanvas3_17 As 'Information button'":
+        "InfoButtonCanvas3_17 As 'Botón de información'":
             BasePaletteColor: =
             Content: ="Indica donde esta implementada la solución o servicio, Cloud, On premise, SaaS."
             DisplayMode: =DisplayMode.Edit
@@ -3499,7 +3499,7 @@ ModuloProyectosIniciativas As screen:
             Y: =346
             ZIndex: =36
 
-        "InfoButtonCanvas3_16 As 'Information button'":
+        "InfoButtonCanvas3_16 As 'Botón de información'":
             BasePaletteColor: =
             Content: ="Corresponde al estado del registro del APM (Procucción, Piloto, Decomisado, entre otros)"
             DisplayMode: =DisplayMode.Edit
@@ -3517,7 +3517,7 @@ ModuloProyectosIniciativas As screen:
             Y: =346
             ZIndex: =37
 
-        "InfoButtonCanvas3_20 As 'Information button'":
+        "InfoButtonCanvas3_20 As 'Botón de información'":
             BasePaletteColor: =
             Content: ="Información del Host del producto , en caso del Install type es Cloud, este debe contener cual cloud (AWS, Azure, Google). Puede tener más de una optción, en caso de que sea un producto hibrido."
             DisplayMode: =DisplayMode.Edit
@@ -3535,7 +3535,7 @@ ModuloProyectosIniciativas As screen:
             Y: =534
             ZIndex: =38
 
-        "InfoButtonCanvas3_21 As 'Information button'":
+        "InfoButtonCanvas3_21 As 'Botón de información'":
             BasePaletteColor: =
             Content: ="Criticidad del producto, el valor más bajo es más crítico. SI es 0 o 1, implica que el producto es alta disponibilidad (impacto en Budget)."
             DisplayMode: =DisplayMode.Edit
@@ -3553,7 +3553,7 @@ ModuloProyectosIniciativas As screen:
             Y: =628
             ZIndex: =39
 
-        "InfoButtonCanvas3_23 As 'Information button'":
+        "InfoButtonCanvas3_23 As 'Botón de información'":
             BasePaletteColor: =
             Content: ="Que tan crítico el producto, y cuánto tiempo puede en producto no contar con la información disponible. 0 y 1 son los más críticos."
             DisplayMode: =DisplayMode.Edit
@@ -3571,7 +3571,7 @@ ModuloProyectosIniciativas As screen:
             Y: =726
             ZIndex: =40
 
-        "InfoButtonCanvas3_19 As 'Information button'":
+        "InfoButtonCanvas3_19 As 'Botón de información'":
             BasePaletteColor: =
             Content: ="Plan de Seguridad del producto. Más detalle lo pueden obtener en Infosec."
             DisplayMode: =DisplayMode.Edit
