--- a/Bind/Src/ModuloGoLive.fx.yaml
+++ b/Bind/Src/ModuloGoLive.fx.yaml
@@ -337,7 +337,7 @@ ModuloGoLive As screen:
                                     If( Text(Dtp_Gl_FechaGolive_4.SelectedDate,"dd/mm/yyyy")<>Mid(First(Split(First(ProyectoSeleccionado).Fecha_Finalizacion_Iniciativa,"|")).Value,1,10),
                                     Text(Dtp_Gl_FechaGolive_4.SelectedDate,"dd/mm/yyyy")&","&Text(Today(),"dd/mm/yyyy")&"|"&First(ProyectoSeleccionado).Fecha_Finalizacion_Iniciativa,First(ProyectoSeleccionado).Fecha_Finalizacion_Iniciativa),
                             'Categoría Iniciativa': {Value: Dpd_Pry_ProductoProyecto.Selected.Value},
-                            IDDominio: Dpd_Pry_Dominio.Selected.IDDominio,
+                            IDDominio: Dpd_Pry_Dominio_1.Selected.IDDominio,
                             IDSubDominio: Dpd_Pry_SubDominio.Selected.IDSubDominio,
                             IDProducto: First(ProyectoSeleccionado).IDProducto,
                             IDEquipo: Cmb_Gl_Equipo.Selected.IDEquipo,
@@ -617,7 +617,7 @@ ModuloGoLive As screen:
                                     If(Text(Dtp_Gl_FechaGolive_4.SelectedDate,"dd/mm/yyyy")<>Mid(First(Split(First(ProyectoSeleccionado).Fecha_Finalizacion_Iniciativa,"|")).Value,1,10),
                                            Text(Dtp_Gl_FechaGolive_4.SelectedDate,"dd/mm/yyyy")&","&Text(Today(),"dd/mm/yyyy")&"|"&First(ProyectoSeleccionado).Fecha_Finalizacion_Iniciativa,First(ProyectoSeleccionado).Fecha_Finalizacion_Iniciativa),
                             'Categoría Iniciativa': {Value: Dpd_Pry_ProductoProyecto.Selected.Value},
-                            IDDominio: Dpd_Pry_Dominio.Selected.IDDominio,
+                            IDDominio: Dpd_Pry_Dominio_1.Selected.IDDominio,
                             IDSubDominio: Dpd_Pry_SubDominio.Selected.IDSubDominio,
                             IDProducto: First(ProyectoSeleccionado).IDProducto,
                             IDEquipo: Cmb_Gl_Equipo.Selected.IDEquipo,
