--- a/Bind/Src/Components/Component1.fx.yaml
+++ b/Bind/Src/Components/Component1.fx.yaml
@@ -146,7 +146,7 @@ Component1 As CanvasComponent:
                     ThisItem.Menu = "Administrar",
                     If(
                         ThisItem.SubMenu = "Auditoria",
-                        Navigate(ModuloAuditoria,ScreenTransition.Fade),
+                        Launch("https://apps.powerapps.com/play/e/default-3cbcc3d3-094d-4006-9849-0d11d61f484d/a/dc79ad06-2c1d-42bf-9a98-aba96fcb2217?tenantId=3cbcc3d3-094d-4006-9849-0d11d61f484d&hint=03554963-7233-441c-8bc8-875f44930003&sourcetime=1715349147478",Blank(),LaunchTarget.Replace),
                         ThisItem.SubMenu = "Forecast",
                         Navigate(GestionFcst,ScreenTransition.Fade),
                         ThisItem.SubMenu = "Lista Producto",
@@ -164,11 +164,11 @@ Component1 As CanvasComponent:
                     ThisItem.SubMenu = "Servicios Tecnología",
                     Navigate(ServiciosTech,ScreenTransition.Fade),
                     ThisItem.SubMenu = "Gestión de Proveedores",
-                    Navigate(SolicitudesProveedor,ScreenTransition.Fade),
+                    Launch("https://apps.powerapps.com/play/e/default-3cbcc3d3-094d-4006-9849-0d11d61f484d/a/81a5ba25-7259-43ba-96f4-6515fbc7f5d7?tenantId=3cbcc3d3-094d-4006-9849-0d11d61f484d&hint=ee7d2627-f3f5-42a7-9a4a-7cd3ef0c4e55&sourcetime=1715082469080?Ventana=Solicitudes",Blank(),LaunchTarget.Replace),
                     ThisItem.SubMenu = "Plan Tech 2024",
                     Navigate(ListadoIniciativas,ScreenTransition.Fade),
                     ThisItem.SubMenu = "Revisión Soportes Proveedores",
-                    Navigate(ModuloRevisionFormatos,ScreenTransition.Fade)
+                    Launch("https://apps.powerapps.com/play/e/default-3cbcc3d3-094d-4006-9849-0d11d61f484d/a/81a5ba25-7259-43ba-96f4-6515fbc7f5d7?tenantId=3cbcc3d3-094d-4006-9849-0d11d61f484d&hint=ee7d2627-f3f5-42a7-9a4a-7cd3ef0c4e55&sourcetime=1715082469080?Ventana=Soportes",Blank(),LaunchTarget.Replace)
                     ),
                     /* FIn de opciones administrar */
                 
