--- a/Bind/Src/Components/AlertasBind.fx.yaml
+++ b/Bind/Src/Components/AlertasBind.fx.yaml
@@ -31,6 +31,7 @@ AlertasBind As CanvasComponent:
     ZIndex: =1
 
     Rectangle4 As rectangle:
+        AccessibleLabel: =false
         Fill: =RGBA(102, 102, 102, 0.16)
         Height: =989
         OnSelect: =Set(_VarAlertasInicio,false)
@@ -51,6 +52,7 @@ AlertasBind As CanvasComponent:
         ZIndex: =2
 
     Icon2_2 As icon.CancelBadge:
+        AccessibleLabel: =false
         Color: =RGBA(116, 116, 116, 1)
         Height: =28
         Icon: =Icon.CancelBadge
