--- a/Bind/Src/Components/MenuPrincipal.fx.yaml
+++ b/Bind/Src/Components/MenuPrincipal.fx.yaml
@@ -200,7 +200,7 @@ MenuPrincipal As CanvasComponent:
                                     If(
                                     PermisoUsuario.Auditoria,
                                     Set(_VarMenuSelec,ThisItem.SubMenu);
-                                    Navigate(ModuloAuditoria,ScreenTransition.CoverRight),
+                                    Launch("https://apps.powerapps.com/play/e/default-3cbcc3d3-094d-4006-9849-0d11d61f484d/a/dc79ad06-2c1d-42bf-9a98-aba96fcb2217?tenantId=3cbcc3d3-094d-4006-9849-0d11d61f484d&hint=03554963-7233-441c-8bc8-875f44930003&sourcetime=1715349147478",Blank(),LaunchTarget.Replace),
                                     Set(_VarMenuSelec,ThisItem.SubMenu);
                                     Navigate(ListadoProductoProyecto,ScreenTransition.CoverRight,{Valor:"Producto"})
                                 )
@@ -209,7 +209,7 @@ MenuPrincipal As CanvasComponent:
                             If(
                                 ThisItem.SubMenu = "Solicitud Contrato Proveedores",
                                 Set(_VarMenuSelec,ThisItem.SubMenu);
-                                Navigate(SolicitudesProveedor,ScreenTransition.CoverRight,{Valor:"Proyecto"}),
+                                Navigate(Portada,ScreenTransition.CoverRight,{Valor:"Proyecto"}),
                                 If(
                                     ThisItem.SubMenu = "Lista de Proyectos",
                                     Set(_VarMenuSelec,ThisItem.SubMenu);
