--- a/Bind/Src/App.fx.yaml
+++ b/Bind/Src/App.fx.yaml
@@ -27,19 +27,20 @@ App As appinfo:
         Set(_UserFoto, IfError(UsuariosdeOffice365.UserPhotoV2(_Perfil.mail),'no-fotos-1'));
         Set(PermisoUsuario,LookUp(Perfilamiento,Nombre.DisplayName=_Perfil.displayName));
         
+        ClearCollect(Col_BD_Persona, Filter(Lst_Persona, Estado = "Activo"));
         
         /*Modulo de Persona*/
         Set(_VarUsuarioJefe, Upper(Last(Split(First(Split(_Perfil.userPrincipalName,"@")).Value,"|")).Value)) ; //  Upper(Last(Split(First(Split(_Perfil.userPrincipalName;"@")).Value;"|")).Value) || m0a00y0 || c0r076x || L0M02OW
-        Set(_VarRolUsuario, LookUp(Lst_Persona,'Correo Electrónico' = _Perfil.mail,Rol));
+        Set(_VarRolUsuario, LookUp(Col_BD_Persona,'Correo Electrónico' = _Perfil.mail,Rol));
         //Last(Split(First(Split(_Perfil.userPrincipalName,"@")).Value,"|")).Value)
         //_Perfil.userPrincipalName,"@")
         
         Concurrent(
             ClearCollect(Col_BD_AsignacionEquipos, Filter(Ingresos_Ceses_Personas, Estado = "Activo")),
             ClearCollect(Col_BD_Gerencia, Filter(Lst_Gerencias, Estado = "Activo")),
-            ClearCollect(Col_BD_Persona, Filter(Lst_Persona, Estado = "Activo"));
+            //ClearCollect(Col_BD_Persona, Filter(Lst_Persona, Estado = "Activo"));
             ClearCollect(Col_BD_Equipos, Filter(DominioEquipoSquad, Estado = "Activo")),
-            ClearCollect(Col_MiEquipoWalmart,Filter(Lst_Persona, Jefe_Directo = _VarUsuarioJefe && Estado = "Activo")), //_Perfil.mail "Carlos.Reichmann0@walmart.com"
+            ClearCollect(Col_MiEquipoWalmart,Filter(Col_BD_Persona, Jefe_Directo = _VarUsuarioJefe && Estado = "Activo")), //_Perfil.mail "Carlos.Reichmann0@walmart.com"
             ClearCollect(Col_BD_Dominios,Filter(Lst_Dominio, Estado_Lst_Dominio = "Activo")),
             ClearCollect(Col_BD_SubDominios,Filter(Lst_SubDominio, Estado_LstSubDominio = "Activo")),
             ClearCollect(Col_BD_Portafolio,'Dominio - Proyecto/Producto'),
