--- a/Bind/Src/ListadoIniciativas.fx.yaml
+++ b/Bind/Src/ListadoIniciativas.fx.yaml
@@ -1250,7 +1250,6 @@ ListadoIniciativas As screen:
                 =Concurrent(
                 ClearCollect(Col_BD_Portafolio,'Dominio - Proyecto/Producto'),
                 ClearCollect(Col_BD_Financiamiento,Portafolio),
-                ClearCollect(Col_BD_OA,'Necesidades Walmart Tech'),
                 ClearCollect(Col_BD_KPIs,'Outcome - Galería Indice Producto/Métrica'),
                 ClearCollect(Col_BD_DetalleKPIs,OUTCOME)
                 //ClearCollect(Col_BD_Dependencias;Lst_DependenciasPortafolio)
@@ -1273,7 +1272,6 @@ ListadoIniciativas As screen:
                 =Concurrent(
                 ClearCollect(Col_BD_Portafolio,'Dominio - Proyecto/Producto'),
                 ClearCollect(Col_BD_Financiamiento,Portafolio),
-                ClearCollect(Col_BD_OA,'Necesidades Walmart Tech'),
                 ClearCollect(Col_BD_KPIs,'Outcome - Galería Indice Producto/Métrica'),
                 ClearCollect(Col_BD_DetalleKPIs,OUTCOME)
                 );
@@ -1412,7 +1410,6 @@ ListadoIniciativas As screen:
                 Concurrent(
                 ClearCollect(Col_BD_Portafolio,'Dominio - Proyecto/Producto'),
                 ClearCollect(Col_BD_Financiamiento,Portafolio),
-                ClearCollect(Col_BD_OA,'Necesidades Walmart Tech'),
                 ClearCollect(Col_BD_KPIs,'Outcome - Galería Indice Producto/Métrica'),
                 ClearCollect(Col_BD_DetalleKPIs,OUTCOME),
                 ClearCollect(Col_BD_Dependencias,Lst_DependenciasPortafolio)
@@ -1439,19 +1436,7 @@ ListadoIniciativas As screen:
                     DisplayMode.Edit
                 )
             FontWeight: =FontWeight.Bold
-            OnSelect: |-
-                =Concurrent(
-                ClearCollect(Col_BD_Portafolio,'Dominio - Proyecto/Producto'),
-                ClearCollect(Col_BD_Financiamiento,Portafolio),
-                ClearCollect(Col_BD_OA,'Necesidades Walmart Tech'),
-                ClearCollect(Col_BD_KPIs,'Outcome - Galería Indice Producto/Métrica'),
-                ClearCollect(Col_BD_DetalleKPIs,OUTCOME)
-                //ClearCollect(Col_BD_Dependencias;Lst_DependenciasPortafolio)
-                );
-                
-                ClearCollect(Col_IDDOminios, Filter(Col_BD_Dominios, Title in Col_DominiosAsignados.Value).IDDominio);
-                ClearCollect(Col_DominiosGestion, Filter(Col_BD_Portafolio, IDDominio in Col_IDDOminios.IDDominio));
-                UpdateContext({_VarMostrarCuadroBloqueo:false})
+            OnSelect: =
             Text: ="Abrir/Extender Orden"
             Tooltip: ="Agregar Producto / Proyecto"
             Width: =215
