--- a/Bind/CanvasManifest.json
+++ b/Bind/CanvasManifest.json
@@ -99,7 +99,7 @@
       "zeroalltabindexes": false
     },
     "Author": "",
-    "BindingErrorCount": 84,
+    "BindingErrorCount": 83,
     "ContainsThirdPartyPcfControls": false,
     "DefaultConnectedDataSourceMaxGetRowsCount": 2000,
     "DocumentAppType": "DesktopOrTablet",
@@ -118,11 +118,11 @@
     "ManualOfflineProfileId": "",
     "Name": "Bind",
     "OriginatingVersion": "1.326",
-    "ParserErrorCount": 1,
+    "ParserErrorCount": 0,
     "ShowStatusBar": false
   },
   "PublishInfo": {
-    "AppName": "9f192b5e-5700-4e95-a16f-2414058c30b2",
+    "AppName": "Bind",
     "BackgroundColor": "rgba(255, 255, 255, 1)",
     "IconColor": "RGBA(255,255,255,1)",
     "IconName": "",
