--- a/Bind/Src/App.fx.yaml
+++ b/Bind/Src/App.fx.yaml
@@ -46,19 +46,9 @@ App As appinfo:
             ClearCollect(Col_BD_Portafolio,'Dominio - Proyecto/Producto'),
             ClearCollect(Col_BD_Financiamiento,Portafolio),
             ClearCollect(Col_BD_FinanciamientoEquipo,Lst_OrdenesEquipos),
-            ClearCollect(Col_BD_OA,'Necesidades Walmart Tech'),
+        //    ClearCollect(Col_BD_OA,'Necesidades Walmart Tech'),
             ClearCollect(Col_BD_KPIs,'Outcome - Galería Indice Producto/Métrica'),
             ClearCollect(Col_BD_DetalleKPIs,OUTCOME),
-            
-            /*ClearCollect(Col_BD_Fcst_Responsable, Lst_Fcst_Responsable),
-            ClearCollect(Col_BD_Fcst_Servicios, Lst_Fcst_Servicios),
-            ClearCollect(Col_BD_Fcst_ServAsignados, Lst_Fcst_ServiciosAsignados),
-            ClearCollect(Col_BD_Fcst_Datos, Lst_Fcst_Datos),
-            ClearCollect(Col_BD_Fcst_Cuenta, Lst_Fcst_MantenedorCuenta),
-            ClearCollect(Col_BD_Fcst_Ceco, Lst_Fcst_MantenedorCeco),
-            ClearCollect(Col_BD_Fcst_Semanas, LST_Fcst_MantenedorSemanas),
-            ClearCollect(Col_BD_Fcst_TCSemanas, Lst_Fcst_TipoCambioSemana),
-            ClearCollect(Col_BD_FCST_ServicioCuentaCeco, Lst_ServicioCuentaCeco), */
             ClearCollect(Col_MenuBind,Lst_MenuBind),
             /* PERMISO MODULO EQUIPO VIRTUALES */
             ClearCollect(
@@ -84,8 +74,8 @@ App As appinfo:
         ClearCollect(Col_DominiosAsignados,LookUp(Perfilamiento,Nombre.DisplayName=_Perfil.displayName,Dominio));  //trae los dominios asignados al usuario
         /*------------------------------------------------------*/
         
-        ClearCollect(Col_IDDOminios, Filter(Col_BD_Dominios, Title in Col_DominiosAsignados.Value).IDDominio);
-        ClearCollect(Col_DominiosGestion, Col_BD_Portafolio);
+        //ClearCollect(Col_IDDOminios, Filter(Col_BD_Dominios, Title in Col_DominiosAsignados.Value).IDDominio);
+        //ClearCollect(Col_DominiosGestion, Col_BD_Portafolio);
         //ClearCollect(Col_DominiosGestion; Filter(Col_BD_Portafolio; IDDominio in Col_IDDOminios.IDDominio));;
         
         Clear(Col_IDEquiposAsignados);
@@ -103,70 +93,7 @@ App As appinfo:
         Set(_VarCantPersonasaCargo,CountRows(Col_MiEquipoWalmart));
         Set(PermisosPersonas, If(_VarCantPersonasaCargo>0,true,false));
         
-        /*
-        Concurrent(
-            ClearCollect(M_Principal;Table(
-            {ID:0; Titulo: "Administrar"; SubTitulo: "Gestiona Información"; Visual:false};
-            {ID:1; Titulo: "Dashboard"; SubTitulo: "Visualiza Información"; Visual:false};
-            {ID:2; Titulo: "Ayuda"; SubTitulo: "Guia de ayuda y onboarding"; Visual:false}
-            ));
-            ClearCollect(M_Secundario;Table(
-            If(
-                PermisoUsuario.servicioData;
-                {ID:0;Orden:1; SubMenu: "Servicio"; Permiso:true};
-                 If(
-                    PermisoUsuario.Auditoria;
-                        {ID:0;Orden:1; SubMenu: "Auditoria"; Permiso:true};
-                        {ID:0;Orden:1; SubMenu: "Lista de Productos"; Permiso:true}
-                 )
-            );
-            //{ID:0, Orden:2, SubMenu: "Lista de Proyectos", Permiso:true}, Navigate(GestionFcst;ScreenTransition.Fade)
-            If(
-                PermisoUsuario.ServicioTecnologia;
-                {ID:0; Orden:2; SubMenu: "Servicios Tecnología";Permiso:true};
-                {ID:0; Orden:2; SubMenu: "Lista de Proyectos"; Permiso:true}
-            );
-            {ID:0; Orden:3; SubMenu:"Personas"; Permiso: PermisosPersonas}; 
-            //{ID:0; Orden:4; SubMenu:"Opportunity Assessment"; Permiso: true};
-            {ID:0; Orden:4; SubMenu:"Solicitud Contrato Proveedores"; Permiso: PermisoUsuario.Proveedores};
-            {ID:0; Orden:5; SubMenu:"Fcst"; Permiso: PermisoUsuario.Fcst};
-            {ID:0; Orden:6; SubMenu:"PPP"; Permiso: PermisoUsuario.PPP};
-            //{ID:0; Orden:6; SubMenu:"ForeCast"; Permiso: PermisoUsuario.Fcst};
-        
-            {ID:1; Orden:0; SubMenu:"Organigrama"; Permiso: true};
-            {ID:1; Orden:1; SubMenu:"Roadmap Walmart Tech"; Permiso: true};
-            {ID:1; Orden:2; SubMenu:"Completitud"; Permiso: true};
-            {ID:1; Orden:3; SubMenu:"KPI"; Permiso: true};
-            {ID:1; Orden:4; SubMenu:"Personas"; Permiso: true};
-            {ID:1; Orden:5; SubMenu:"Plan Tech 2023"; Permiso: true};
-            {ID:1; Orden:6; SubMenu:"Opportunity Assessment"; Permiso: true};
-            {ID:1; Orden:7; SubMenu:"Estrategia"; Permiso: true};
-            {ID:1; Orden:8; SubMenu:"International Monthly Report"; Permiso: true};
-            {ID:1; Orden:9; SubMenu:"Capitalización"; Permiso: true};
-            {ID:1; Orden:10; SubMenu:"Code Yellow"; Permiso: true};
-            //{ID:1, Orden:10, SubMenu:"Programas", Permiso: true},
-            {ID:1; Orden:11; SubMenu:"Seguimiento OI/OE"; Permiso: PermisoUsuario.SeguimientoOI};
-            {ID:1; Orden:12; SubMenu:"HeadCount"; Permiso: PermisoUsuario.HeadCount};
-            {ID:1; Orden:13; SubMenu:"Infosec"; Permiso: true};
-            {ID:1; Orden:14; SubMenu:"Auditoria"; Permiso: true};
-            {ID:1; Orden:15; SubMenu:"Seguimiento de proyectos"; Permiso: true};
-            {ID:1; Orden:16; SubMenu:"Seguimiento Datos"; Permiso: true};
-            {ID:1; Orden:17; SubMenu:"Seguimiento servicios tecnologicos"; Permiso: true};
-        
-            {ID:2; Orden:1; SubMenu:"Onboarding"; Permiso: true};
-            {ID:2; Orden:2; SubMenu:"Contáctate con nosotros"; Permiso: true};
-            {ID:2; Orden:3; SubMenu:"Déjanos tu feedback"; Permiso: true}
-        
-            ));
-            ClearCollect(Col_ValoresCriticidad;
-              {ID:1; Value: "Bajo"};
-              {ID:2; Value: "Medio"};
-              {ID:3; Value: "Alto"}
-            )
-        );;
-        */
-        
-         ClearCollect(Col_ValoresCriticidad,
+        ClearCollect(Col_ValoresCriticidad,
               {ID:1, Value: "Bajo"},
               {ID:2, Value: "Medio"},
               {ID:3, Value: "Alto"}
