--- a/Bind/Src/ListadoIniciativas.fx.yaml
+++ b/Bind/Src/ListadoIniciativas.fx.yaml
@@ -695,7 +695,7 @@ ListadoIniciativas As screen:
         PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
         PressedFill: =RGBA(0, 121, 187, 1)
         SearchFields: =["AnnoPrioridad"]
-        SearchItems: =Search(Lst_Plan_Prioridad,Dpd_FiltroProyeProd_2.SearchText,AnnoPrioridad)
+        SearchItems: =[]
         SelectionFill: =RGBA(0, 121, 187, 1)
         SelectMultiple: =false
         Tooltip: =
@@ -1000,7 +1000,7 @@ ListadoIniciativas As screen:
             PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
             PressedFill: =RGBA(0, 121, 187, 1)
             SearchFields: =["AnnoObjetivo"]
-            SearchItems: =Search(Lst_Plan_Objetivos,Cmb_FiltroNombre_8.SearchText,AnnoObjetivo)
+            SearchItems: =[]
             SelectionFill: =RGBA(0, 121, 187, 1)
             SelectMultiple: =false
             Tooltip: =
