--- a/Bind/Src/ModuloPersonaV1.fx.yaml
+++ b/Bind/Src/ModuloPersonaV1.fx.yaml
@@ -867,7 +867,7 @@ ModuloPersonaV1 As screen:
                     PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
                     PressedFill: =RGBA(0, 121, 187, 1)
                     SearchFields: =["ComplianceAssetId"]
-                    SearchItems: =Search(Filter(Col_BD_Gerencia, Nivel = "2"),Cmb_GerenciaOrigen_1.SearchText,'Id. de activo de cumplimiento normativo')
+                    SearchItems: =[]
                     SelectionFill: =RGBA(0, 121, 187, 1)
                     SelectMultiple: =false
                     Tooltip: =Parent.DisplayName
@@ -1911,7 +1911,7 @@ ModuloPersonaV1 As screen:
                     PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
                     PressedFill: =RGBA(0, 121, 187, 1)
                     SearchFields: =["Value"]
-                    SearchItems: =Search(["Headcount","Subcontratación Headcount","Subcontratación Servicios"],DataCardValue162.SearchText,Value)
+                    SearchItems: =[]
                     SelectMultiple: =false
                     Tooltip: =Parent.DisplayName
                     Width: =Txt_FondoForm1_197.Width - 27
@@ -3048,7 +3048,7 @@ ModuloPersonaV1 As screen:
             Items: =Col_BD_Dominios
             PressedFill: =RGBA(0, 121, 187, 1)
             SearchFields: =["ComplianceAssetId"]
-            SearchItems: =Search(Col_BD_Dominios,Cmb_CambioDominio_1.SearchText,'Id. de activo de cumplimiento normativo')
+            SearchItems: =Search(Col_BD_Dominios,Cmb_CambioDominio_1.SearchText,ComplianceAssetId)
             SelectMultiple: =false
             Visible: =PopUpBorrar_CasoEspecial && Dpd_SeleccionarAccion_2.Selected.Value = "Movilidad interna"
             Width: =Txt_FondoForm1_198.Width - 27
