--- a/Bind/Src/ListadoIniciativas.fx.yaml
+++ b/Bind/Src/ListadoIniciativas.fx.yaml
@@ -1246,18 +1246,7 @@ ListadoIniciativas As screen:
                     DisplayMode.Edit
                 )
             FontWeight: =FontWeight.Bold
-            OnSelect: |-
-                =Concurrent(
-                ClearCollect(Col_BD_Portafolio,'Dominio - Proyecto/Producto'),
-                ClearCollect(Col_BD_Financiamiento,Portafolio),
-                ClearCollect(Col_BD_KPIs,'Outcome - Galería Indice Producto/Métrica'),
-                ClearCollect(Col_BD_DetalleKPIs,OUTCOME)
-                //ClearCollect(Col_BD_Dependencias;Lst_DependenciasPortafolio)
-                );
-                
-                ClearCollect(Col_IDDOminios, Filter(Col_BD_Dominios, Title in Col_DominiosAsignados.Value).IDDominio);
-                ClearCollect(Col_DominiosGestion, Filter(Col_BD_Portafolio, IDDominio in Col_IDDOminios.IDDominio));
-                UpdateContext({_VarMostrarCuadroBloqueo:false})
+            OnSelect: =
             Text: ="Actualizar"
             Tooltip: ="Agregar Producto / Proyecto"
             Width: =98
@@ -1268,17 +1257,7 @@ ListadoIniciativas As screen:
         Image23_13 As image:
             Height: =40
             Image: ='nuevo actualizar '
-            OnSelect: |-
-                =Concurrent(
-                ClearCollect(Col_BD_Portafolio,'Dominio - Proyecto/Producto'),
-                ClearCollect(Col_BD_Financiamiento,Portafolio),
-                ClearCollect(Col_BD_KPIs,'Outcome - Galería Indice Producto/Métrica'),
-                ClearCollect(Col_BD_DetalleKPIs,OUTCOME)
-                );
-                
-                ClearCollect(Col_IDDOminios, Filter(Col_BD_Dominios, Title in Col_DominiosAsignados.Value).IDDominio);
-                ClearCollect(Col_DominiosGestion, Filter(Col_BD_Portafolio, IDDominio in Col_IDDOminios.IDDominio));
-                UpdateContext({_VarMostrarCuadroBloqueo:false})
+            OnSelect: =
             Tooltip: ="Actualizar datos"
             Width: =35
             X: =1634
@@ -1447,18 +1426,7 @@ ListadoIniciativas As screen:
         Image23_18 As image:
             Height: =40
             Image: ='layers (1)'
-            OnSelect: |-
-                =Concurrent(
-                ClearCollect(Col_BD_Portafolio,'Dominio - Proyecto/Producto'),
-                ClearCollect(Col_BD_Financiamiento,Portafolio),
-                ClearCollect(Col_BD_OA,'Necesidades Walmart Tech'),
-                ClearCollect(Col_BD_KPIs,'Outcome - Galería Indice Producto/Métrica'),
-                ClearCollect(Col_BD_DetalleKPIs,OUTCOME)
-                );
-                
-                ClearCollect(Col_IDDOminios, Filter(Col_BD_Dominios, Title in Col_DominiosAsignados.Value).IDDominio);
-                ClearCollect(Col_DominiosGestion, Filter(Col_BD_Portafolio, IDDominio in Col_IDDOminios.IDDominio));
-                UpdateContext({_VarMostrarCuadroBloqueo:false})
+            OnSelect: =
             Tooltip: ="Actualizar datos"
             Width: =35
             X: =1636
