--- a/Bind/Src/ModuloData.fx.yaml
+++ b/Bind/Src/ModuloData.fx.yaml
@@ -2018,18 +2018,7 @@ ModuloData As screen:
         Image23_1 As image:
             Height: =40
             Image: ='nuevo actualizar '
-            OnSelect: |-
-                =Concurrent(
-                ClearCollect(Col_BD_Portafolio,'Dominio - Proyecto/Producto'),
-                ClearCollect(Col_BD_Financiamiento,Portafolio),
-                ClearCollect(Col_BD_OA,'Necesidades Walmart Tech'),
-                ClearCollect(Col_BD_KPIs,'Outcome - Galería Indice Producto/Métrica'),
-                ClearCollect(Col_BD_DetalleKPIs,OUTCOME)
-                );
-                
-                ClearCollect(Col_IDDOminios, Filter(Col_BD_Dominios, Title in Col_DominiosAsignados.Value).IDDominio);
-                ClearCollect(Col_DominiosGestion, Filter(Col_BD_Portafolio, IDDominio in Col_IDDOminios.IDDominio));
-                UpdateContext({_VarMostrarCuadroBloqueo:false})
+            OnSelect: =
             Tooltip: ="Actualizar datos"
             Width: =35
             X: =1692
@@ -2058,21 +2047,7 @@ ModuloData As screen:
             Fill: =RGBA(0, 0, 0, 0)
             Height: =43
             HoverFill: =RGBA(255, 255, 255, 0.5)
-            OnSelect: |-
-                =/*Mostrar Spinner Cargando*/
-                Set(_VarMostrarCargando,true);
-                Concurrent(
-                ClearCollect(Col_BD_Portafolio,'Dominio - Proyecto/Producto'),
-                ClearCollect(Col_BD_Financiamiento,Portafolio),
-                ClearCollect(Col_BD_OA,'Necesidades Walmart Tech'),
-                ClearCollect(Col_BD_KPIs,'Outcome - Galería Indice Producto/Métrica'),
-                ClearCollect(Col_BD_DetalleKPIs,OUTCOME)
-                );
-                ClearCollect(Col_IDDOminios, Filter(Col_BD_Dominios, Title in Col_DominiosAsignados.Value).IDDominio);
-                ClearCollect(Col_DominiosGestion, Filter(Col_BD_Portafolio, IDDominio in Col_IDDOminios.IDDominio));
-                UpdateContext({_VarMostrarCuadroBloqueo:false});
-                /*Mostrar Spinner Cargando*/
-                Set(_VarMostrarCargando,false);
+            OnSelect: =
             PressedFill: =RGBA(255, 255, 255, 0.7)
             Text: =""
             Width: =136
